move project to netbeans

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -18,31 +18,38 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/ModbusPal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jcommon-1.0.18.jar=../jfreechart-1.0.15/lib/jcommon-1.0.18.jar
-file.reference.jfreechart-1.0.15.jar=../jfreechart-1.0.15/lib/jfreechart-1.0.15.jar
-file.reference.jython.jar=../jython-2.7.0/jython.jar
-file.reference.RXTXcomm.jar=../rxtx-2.1-7-bins-r2/RXTXcomm.jar
+file.reference.jcommon.jar=lib/jcommon.jar
+file.reference.jfreechart.jar=lib/jfreechart.jar
+file.reference.jython-standalone.jar=lib/jython-standalone.jar
+file.reference.rxtx.jar=lib/rxtx.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcommon-1.0.18.jar}:\
-    ${file.reference.RXTXcomm.jar}:\
-    ${file.reference.jython.jar}:\
-    ${file.reference.jfreechart-1.0.15.jar}
+    ${file.reference.jcommon.jar}:\
+    ${file.reference.jfreechart.jar}:\
+    ${file.reference.jython-standalone.jar}:\
+    ${file.reference.rxtx.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
+javac.external.vm=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
@@ -50,9 +57,12 @@ javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -62,6 +72,8 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+jlink.launcher=false
+jlink.launcher.name=ModbusPal
 jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
@@ -80,9 +92,13 @@ run.classpath=\
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
 run.jvmargs=-ea
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
