--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,14 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="ModbusPal" default="default" basedir=".">
+<project xmlns:ivy="antlib:org.apache.ivy.ant" name="ModbusPal" default="default" basedir=".">
     <description>Builds, tests, and runs the project ModbusPal.</description>
+    <target name="-post-init" description="retrieve dependencies with Ivy">
+        <ivy:retrieve  pattern="/lib/[artifact].[ext]"/>
+     </target>
+     <target name="-post-clean" description="retrieve dependencies with Ivy">
+        <ivy:cleancache/>
+     </target>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -51,8 +57,7 @@
       -init-macrodef-junit:     defines macro for junit execution
       -init-macrodef-debug:     defines macro for class debugging
       -init-macrodef-java:      defines macro for class execution
-      -do-jar-with-manifest:    JAR building (if you are using a manifest)
-      -do-jar-without-manifest: JAR building (if you are not using a manifest)
+      -do-jar:                  JAR building
       run:                      execution of project 
       -javadoc-build:           Javadoc generation
       test-report:              JUnit report generation
